port Dockerfile to debian

--- a/slurm-docker-cluster/Dockerfile
+++ b/slurm-docker-cluster/Dockerfile
@@ -1,82 +1,26 @@
-FROM rockylinux:9.2
+FROM debian:bookworm
 
-ENV LC_ALL=en_US.utf8
-ENV LANG=en_US.utf8
+ARG SLURM_VERSION="24.05.4"
+ARG UV_VERSION="0.6.4"
+ARG SLURM_USER_UID=990
+ARG SLURM_USER_GID=990
 
-LABEL org.opencontainers.image.source="https://github.com/giovtorres/slurm-docker-cluster" \
-      org.opencontainers.image.title="slurm-docker-cluster" \
-      org.opencontainers.image.description="Slurm Docker cluster on CentOS 7" \
-      org.label-schema.docker.cmd="docker-compose up -d" \
-      maintainer="Giovanni Torres"
+COPY --from=ghcr.io/astral-sh/uv:$UV_VERSION /uv /bin/uv
 
-ARG SLURM_TAG=slurm-22-05-9-1
-ARG GOSU_VERSION=1.11
+RUN set -xe \
+	&& apt-get update \
+	&& apt-get install -y curl gnupg
 
-COPY --from=ghcr.io/astral-sh/uv:0.4.20 /uv /bin/uv
+RUN bash -c "set -xe && for package in 'smd' 'smd-client' 'smd-slurmd' 'smd-slurmctld' 'smd-slurmdbd' 'smd-sview'; do \
+	curl -Lo \"/tmp/slurm-\${package}.deb\" https://github.com/scalableminds/slurm-packages/releases/download/${SLURM_VERSION}/slurm-\${package}_${SLURM_VERSION}-1_amd64.deb; \
+done"
+RUN bash -c "apt-get install --yes -f /tmp/*.deb"
+RUN bash -c "rm /tmp/*"
 
-RUN set -ex \
-    && dnf makecache \
-    && dnf -y update \
-    && dnf -y install dnf-plugins-core https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm \
-    && dnf config-manager --enable epel \
-    && dnf config-manager --enable crb \
-    && dnf -y install \
-       wget \
-       bzip2 \
-       perl \
-       gcc \
-       gcc-c++\
-       git \
-       glibc-langpack-en \
-       gnupg \
-       make \
-       munge \
-       munge-devel \
-       python39 \
-       python3-devel \
-       python3-pip \
-       mariadb-server \
-       mariadb-devel \
-       psmisc \
-       slurm-contribs \
-       bash-completion \
-       vim-enhanced \
-    && dnf clean all \
-    && rm -rf /var/cache/yum \
-    && ln -s /usr/bin/python3 /usr/bin/python
-
-
-
-RUN set -ex \
-    && wget -O /usr/local/bin/gosu "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-amd64" \
-    && wget -O /usr/local/bin/gosu.asc "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-amd64.asc" \
-    && export GNUPGHOME="$(mktemp -d)" \
-    # See https://github.com/tianon/gosu/issues/17#issuecomment-348464529
-    && ( gpg --keyserver ha.pool.sks-keyservers.net --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4 \
-      || gpg --keyserver pgp.mit.edu --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4 \
-      || gpg --keyserver keyserver.pgp.com --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4 \
-      || gpg --keyserver keyserver.ubuntu.com --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4 \
-    ) \
-    && gpg --batch --verify /usr/local/bin/gosu.asc /usr/local/bin/gosu \
-    && rm -rf "${GNUPGHOME}" /usr/local/bin/gosu.asc \
-    && chmod +x /usr/local/bin/gosu \
-    && gosu nobody true
-
-RUN set -x \
-    && git clone --depth 1 --branch $SLURM_TAG https://github.com/SchedMD/slurm.git \
-    && pushd slurm \
-    && ./configure --enable-debug --prefix=/usr --sysconfdir=/etc/slurm \
-        --with-mysql_config=/usr/bin  --libdir=/usr/lib64 \
-    && make install \
-    && install -D -m644 etc/cgroup.conf.example /etc/slurm/cgroup.conf.example \
-    && install -D -m644 etc/slurm.conf.example /etc/slurm/slurm.conf.example \
-    && install -D -m644 etc/slurmdbd.conf.example /etc/slurm/slurmdbd.conf.example \
-    && install -D -m644 contribs/slurm_completion_help/slurm_completion.sh /etc/profile.d/slurm_completion.sh \
-    && popd \
-    && rm -rf slurm \
-    && groupadd -r --gid=1001 slurm \
-    && useradd -r -g slurm --uid=1001 slurm \
-    && mkdir /etc/sysconfig/slurm \
+RUN set -xe \
+	&& addgroup --gid="$SLURM_USER_GID" slurm \
+	&& adduser --system --uid="$SLURM_USER_UID" --ingroup slurm slurm \
+    && mkdir -p /etc/sysconfig/slurm \
         /var/spool/slurmd \
         /var/run/slurmd \
         /var/run/slurmdbd \
@@ -92,17 +36,13 @@ RUN set -x \
         /var/lib/slurmd/assoc_usage \
         /var/lib/slurmd/qos_usage \
         /var/lib/slurmd/fed_mgr_state \
-    && chown -R slurm:slurm /var/*/slurm* \
-    && /sbin/create-munge-key
+    && chown -R slurm:slurm /var/*/slurm*
 
 COPY --chown=slurm:slurm slurm.conf /etc/slurm/slurm.conf
 COPY --chown=slurm:slurm slurmdbd.conf /etc/slurm/slurmdbd.conf
-
 RUN chmod 600 /etc/slurm/slurm.conf
 RUN chmod 600 /etc/slurm/slurmdbd.conf
 
 COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
-
 ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
-
 CMD ["slurmdbd"]
