--- a/s3-proxy/package.json
+++ b/s3-proxy/package.json
@@ -6,8 +6,8 @@
   "author": "Norman Rzepka <norman.rzepka@scalableminds.com>",
   "license": "MIT",
   "dependencies": {
-    "aws-sdk": "^2.932.0",
-    "express": "^4.19.2",
+    "@aws-sdk/client-s3": "^3.804.0",
+    "express": "^5.1.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
@@ -15,5 +15,6 @@
   },
   "scripts": {
     "start": "node index.js"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
