--- a/slurm-docker-cluster/Dockerfile
+++ b/slurm-docker-cluster/Dockerfile
@@ -21,7 +21,7 @@ RUN set -xe \
 	&& apt-get update \
 	&& apt-get install --yes mysql-server
 
-RUN bash -c "set -xe && for package in 'smd' 'smd-client' 'smd-slurmd' 'smd-slurmctld' 'smd-slurmdbd' 'smd-sview'; do \
+RUN bash -c "set -xe && for package in 'smd' 'smd-client' 'smd-slurmd' 'smd-slurmctld' 'smd-slurmdbd' 'smd-slurmrestd' 'smd-sview'; do \
 	curl -Lo \"/tmp/slurm-\${package}.deb\" https://github.com/scalableminds/slurm-packages/releases/download/${SLURM_VERSION}/slurm-\${package}_${SLURM_VERSION}-1_amd64.deb; \
 done"
 RUN apt-get install --yes -f /tmp/*.deb
